--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "npm": "^10.8.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
