--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "date-fns": "^4.1.0",
     "element-ui": "^2.15.14",
     "js-cookie": "^3.0.5",
     "vanta": "^0.5.24",
